# spark

./: .gitattributes  .gitignore  .lefthook.yml  .mise.toml  CLAUDE.md  Dockerfile  Makefile  README.md  restart-operators.sh  run-everything.sh  so.template.config.yaml
.claude/: .session_state.json  CLAUDE.md  README.md  spark_config.json
.claude/commands/: clean_code.md  commit.md  debug-spark-integration-tests.md  diagnose_single_slack_error.md  linear.md  research.md  run_and_debug.md  setup_worktrees.md  spark_sec_review.md
.claude/flows/: static_deposits.md
.claude/scripts/: linear_query.sh
.github/workflows/: js-sdk-lockfile.yml  js-sdk.yml  test-release-sync.yaml
github/: README.md
protos/: dkg.proto  frost.proto  gossip.proto  mock.proto  spark.proto  spark_internal.proto  spark_token.proto  spark_token_internal.proto  tpre.proto
public/: copy.bara.sky
public/scripts/: verify-android-page-size.sh
schemas/: ssp_2025_03_19_schema.graphql
sdks/js/: .yarnrc.yml  README.md  package.json  turbo.json
signer/: Cargo.toml  README.md  rust-toolchain.toml
signer/spark-frost/: Cargo.toml  build.rs
signer/spark-frost-signer/: Cargo.toml
signer/spark-frost-uniffi/: Cargo.toml  README.md  build-bindings.sh  build-rn-bindings.sh
signer/spark-frost/examples/: gen_test_payload.rs  tpre_live_test.rs  verify_live_tpre.rs
signer/spark-frost/src/: adaptor_signature.rs  htlc.rs  lib.rs  tpre.rs  transaction.rs
spark/: .golangci.yml  .mise.toml  CLAUDE.md  constant.go  go.mod  go.sum
spark/common/: adaptor_signature.go  adaptor_signature_test.go  (+16 more)
(+706 files in other folders)
