[package]
name = "spark-frost"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
frost-secp256k1-tr = { workspace = true }
frost-core = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bitcoin = "0.32.5"
ecies = { workspace = true }
rayon = { workspace = true }

# T-PRE: threshold proxy re-encryption deps (versions match ecies 0.2.x)
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
libsecp256k1 = "0.7.2"
typenum = "1.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "signing_bench"
harness = false

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.11"
